@@ -15,10 +15,11 @@ module.exports = function (hapi, agent, { version, enabled }) {
     agent.logger.debug('hapi version %s not supported - aborting...', version)
     return hapi
   }
+  const isHapiGte17 = semver.satisfies(version, '>=17')
 
   agent.logger.debug('shimming hapi.Server.prototype.initialize')
 
-  if (semver.satisfies(version, '>=17')) {
+  if (isHapiGte17) {
     shimmer.massWrap(hapi, ['Server', 'server'], function (orig) {
       return function (options) {
         var res = orig.apply(this, arguments)
@@ -60,13 +61,16 @@ module.exports = function (hapi, agent, { version, enabled }) {
     if (typeof server.ext === 'function') {
       server.ext('onPreAuth', onPreAuth)
       server.ext('onPreResponse', onPreResponse)
+      if (agent._conf.captureBody !== 'off') {
+        server.ext('onPostAuth', onPostAuth)
+      }
     } else {
       agent.logger.debug('unable to enable automatic hapi transaction naming')
     }
   }
 
   function attachEvents (emitter) {
-    if (semver.satisfies(version, '<17')) {
+    if (!isHapiGte17) {
       emitter.on('request-error', function (request, error) {
         agent.captureError(error, {
           request: request.raw && request.raw.req
@@ -137,9 +141,15 @@ module.exports = function (hapi, agent, { version, enabled }) {
       }
     }
 
-    return semver.satisfies(version, '>=17')
-      ? reply.continue
-      : reply.continue()
+    return (isHapiGte17 ? reply.continue : reply.continue())
+  }
+
+  function onPostAuth (request, reply) {
+    if (request.payload && request.raw && request.raw.req) {
+      // Save the parsed req body to be picked up by getContextFromRequest().
+      request.raw.req.payload = request.payload
+    }
+    return (isHapiGte17 ? reply.continue : reply.continue())
   }
 
   function onPreResponse (request, reply) {
@@ -158,9 +168,7 @@ module.exports = function (hapi, agent, { version, enabled }) {
       agent._instrumentation.setDefaultTransactionName('CORS preflight')
     }
 
-    return semver.satisfies(version, '>=17')
-      ? reply.continue
-      : reply.continue()
+    return (isHapiGte17 ? reply.continue : reply.continue())
   }
 
   return hapi
