@@ -3,6 +3,7 @@
 const {
   assertRequestHeadersWithFixture,
   assertResponseHeadersWithFixture,
+  assertFormsWithFixture,
   createAgentConfig,
   resetAgent
 } = require('./_shared')
@@ -60,9 +61,7 @@ async function runTest (
     const transaction = data.transactions.pop()
     assertRequestHeadersWithFixture(transaction, expected, t)
     assertResponseHeadersWithFixture(transaction, expected, t)
-    // TODO: uncomment once we fix
-    // https://github.com/elastic/apm-agent-nodejs/issues/1905
-    // assertFormsWithFixture(transaction, expected, t)
+    assertFormsWithFixture(transaction, expected, t)
   })
 
   // register request handler
